# SlicerEISegMed3D

./: CMakeLists.txt  EIMedSeg3D.s4ext  EISegMed3D.s4ext  README.md  README_en.md  requirments.txt
EIMedSeg3D/: CMakeLists.txt  EIMedSeg3D.py
EIMedSeg3D/Resources/UI/: EIMedSeg3D.ui
EIMedSeg3D/inference/: __init__.py  models.py  ops.py  predictor.py  preprocessing.py  to_static.py
EIMedSeg3D/test_MR/: labels.txt
EISegMed3D/: CMakeLists.txt  EISegMed3D.py
EISegMed3D/Resources/UI/: EISegMed3D.ui
EISegMed3D/inference/: predictor.py  to_static.py
EISegMed3D/test_MR/: labels.txt
placePoint/: placePoint.py
placePoint/Resources/UI/: placePoint.ui
